Fixed the image overflowing

--- a/SASS-PROJECT/css/style.css
+++ b/SASS-PROJECT/css/style.css
@@ -340,7 +340,7 @@ body {
   font-size: 1.6rem;
   transform: skewX(-12deg); }
   .story__shape {
-    width: 15rem;
+    width: 19rem;
     height: 15rem;
     float: left;
     -webkit-shape-outside: circle(50% at 50% 50%);
@@ -351,7 +351,9 @@ body {
     position: relative; }
   .story__img {
     height: 100%;
-    transform: translateX(-4rem); }
+    transform: translateX(-3rem) scale(1.3);
+    backface-visibility: hidden;
+    transition: all 0.5s; }
   .story__text {
     transform: skewX(12deg); }
   .story__caption {
@@ -369,6 +371,9 @@ body {
   .story:hover .story__caption {
     opacity: 1;
     transform: translate(-50%, -50%); }
+  .story:hover .story__img {
+    transform: translateX(-3rem) scale(1);
+    filter: blur(3px) brightness(80%); }
 
 /* 
     & > * {
