--- a/SASS-PROJECT/sass/components/_story.scss
+++ b/SASS-PROJECT/sass/components/_story.scss
@@ -10,7 +10,7 @@
     transform: skewX(-12deg);
 
     &__shape {
-        width: 15rem;
+        width: 19rem;
         height: 15rem;
         float: left;
         -webkit-shape-outside: circle(50% at 50% 50%);
@@ -23,7 +23,9 @@
 
     &__img {
         height: 100%;
-        transform: translateX(-4rem);
+        transform: translateX(-3rem) scale(1.3);
+        backface-visibility: hidden;
+        transition: all 0.5s;
     }
     &__text {
         transform: skewX(12deg);
@@ -48,7 +50,10 @@
         transform: translate(-50%, -50%);
     }
 
-    &
+    &:hover &__img {
+        transform: translateX(-3rem) scale(1);
+        filter: blur(3px) brightness(80%);
+    }
 }
 
 /* 
